# physics

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yaml
blog/: package-lock.json  package.json  quartz.config.ts  quartz.layout.ts
blog/content/: coulombs.md  index.md  transition.md  vector-field.md
blog/content/styles/: custom.scss
blog/quartz/: bootstrap-cli.mjs  build.ts  cfg.ts  worker.ts
blog/quartz/cli/: args.js  handlers.js  helpers.js
blog/quartz/components/: Backlinks.tsx  Breadcrumbs.tsx  Comments.tsx  Explorer.tsx  Flex.tsx  Graph.tsx  Head.tsx  OverflowList.tsx  PageList.tsx  TableOfContents.tsx  renderPage.tsx
blog/quartz/i18n/: index.ts
blog/quartz/plugins/: types.ts
blog/quartz/processors/: parse.ts
blog/quartz/styles/: base.scss  callouts.scss  custom.scss
blog/quartz/util/: fileTrie.test.ts  fileTrie.ts  log.ts  og.tsx  path.test.ts  (+3 more)
rust-gpu/: Cargo.toml
rust-gpu/app/: Cargo.toml  build.rs
rust-gpu/app/src/: lib.rs  main.rs  util.rs
rust-gpu/app/src/wgpu_renderer/: bind_group.rs  electric_manager.rs  mod.rs  mouse.rs  particle_manager.rs  renderer.rs  renderer_pipeline.rs  state.rs  swapchain.rs  texture.rs
rust-gpu/app/src/wgpu_renderer/managers/: electric.rs  mod.rs  particle.rs
rust-gpu/app/src/wgpu_renderer/pipelines/: electric.rs  grid.rs  mod.rs  particle.rs
rust-gpu/shaders/: Cargo.toml
rust-gpu/shaders/electric/: Cargo.toml
rust-gpu/shaders/electric/src/: lib.rs
rust-gpu/shaders/grid/: Cargo.toml
rust-gpu/shaders/grid/src/: lib.rs
rust-gpu/shaders/particle/: Cargo.toml
rust-gpu/shaders/particle/src/: lib.rs
rust-gpu/shaders/shared/: Cargo.toml
rust-gpu/shaders/shared/src/: lib.rs
rust-gpu/shaders/src/: electric.rs  grid.rs  lib.rs  particle.rs  shared.rs  util.rs
src/: grid.rs  main.rs  particle.rs  utils.rs
vector-field/src/: main.rs  particle.rs
vectors/src/: main.rs
(+35 files in other folders)
