[package]
name = "app"
publish = false
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# shader crate
shaders = { path = "../shaders" }

# API
wgpu.workspace = true
pollster.workspace = true
env_logger.workspace = true

# other
raw-window-handle.workspace = true
winit.workspace = true
anyhow.workspace = true
bytemuck.workspace = true
glam.workspace = true

[build-dependencies]
# rust-gpu
cargo-gpu-install.workspace = true

# other
anyhow.workspace = true
